# Alexis-Alves

Project/: CMakeList.txt  CMakeLists.txt  base.cpp  base.h  game.cpp  game.h  graphics.cpp  graphics.h  items.cpp  items.h  main.cpp
War/: card.hpp  card1.hpp  deck.hpp  main.cpp
